--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <label for="cbwait"></label>
                 <div class="ms"><div contenteditable="true">50</div></div>
             </div>
+            <div class="queensnumber"><div contenteditable="true">8</div></div>
             <div class="start btn"></div>
         </div>
         <div class="boardcontainer">
