--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
                 <label for="cbwait"></label>
                 <div class="ms"><div contenteditable="true">50</div></div>
             </div>
-            <div class="queensnumber"><div contenteditable="true">8</div></div>
+            <div class="queensnumber">
+                <div contenteditable="true">8</div>
+            </div>
             <div class="start btn"></div>
         </div>
         <div class="boardcontainer">
-            <div class="row">
+            <!-- <div class="row">
                 <div class="cell"></div>
                 <div class="cell"></div>
                 <div class="cell"></div>
@@ -108,7 +110,80 @@
             <div class="wait"></div>
             <div class="wait"></div>
             <div class="wait"></div>
-        </div>
+        </div> -->
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell wait"></div>
+        <div class="cell wait"></div>
+        <div class="cell wait"></div>
+        <div class="cell wait"></div>
+        <div class="cell wait"></div>
+        <div class="cell wait"></div>
+        <div class="cell wait"></div>
+        <div class="cell wait"></div>
+        <div class="border"></div>
     </div>
 </div>
 </body>
